<resources>
    <string name="app_name">iMoney</string>
    <string-array name="invest_tab">
        <item>全部理财</item>
        <item>推荐理财</item>
        <item>热门理财</item>
    </string-array>

    <!-- Gesture code starting -->
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="setup_gesture_pattern">绘制解锁图案</string>
    <string name="setup_gesture_pattern_again">再次绘制解锁图案</string>
    <string name="forget_gesture_code">忘记手势密码?</string>
    <string name="use_other_account_login">用其他账号登录</string>
    <string name="set_gesture_pattern">绘制解锁图案</string>
    <string name="set_gesture_pattern_reason">设置手势密码，防止他人未经授权查看</string>
    <string name="reset_gesture_code">重新设置手势密码</string>
    <string name="icbc">风险保障金由ICBC银行监管</string>
    <string name="p2p_name">P2P金融</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="login_account">手机号</string>
    <string name="login_password">验证码</string>
    <string name="login_youke">游客试用</string>
    <string name="login_login">登录</string>
    <!-- End -->

    <string name="multi_language">多语言</string>
    <string name="save_btn">保存</string>
    <string name="language_select">语言选择</string>
    <string name="set_success">设置成功，重新进入APP即可生效</string>
    <string name="rb_home">首页</string>
    <string name="rb_invest">投资</string>
    <string name="rb_my_assets">我的资产</string>
    <string name="rb_more">更多</string>
    <string name="toast_exit_click_again">再点击一次返回键退出应用</string>
    <string name="marquee_text">让理财更简单，让生活更美好，智慧投资从这里开始！</string>
    <string name="use_right_away">立即体验</string>
    <string name="textview_send">发送</string>
    <string name="resend">重新发送</string>
    <string name="invest_instruction">1、所有投资保证金将有第三方平台托管。 2、线上、线下充值手续费全免。 3、请注意您的银行卡充值限额，以免造成不便。 4、如果充值进的没有及时到帐，请与客服联系。 5、禁止信用卡套现、虚假交易等行为，已经发现将予以处罚,包括但不限于：限制收款、冻结账户，永久停止服务等。 6、如果您的账户充值金额为用于投资在本平台的理财服务,3个月之后才能进行体现申请。 7、如果已在手机客户端充过值，则电脑端或手机端体现都只能使用该银行卡。除非原卡丢失、损坏或停用，否则一经绑定银行卡，将不得更换。此情况下，请联系客服并提供由银行提供的书面证明材料。</string>
</resources>
