<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColorHint="#FFFFFF">

            <EditText
                android:id="@+id/log_ed_mob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/login_account"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/dp_16" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvSendSmsCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_6"
            android:text="@string/textview_send"
            android:textColor="@color/white"
            android:visibility="gone" />

        <cn.iwgang.countdownview.CountdownView
            android:id="@+id/countDownView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:padding="@dimen/dp_2"
            android:visibility="gone"
            app:isHideTimeBackground="true"
            app:isShowDay="false"
            app:isShowHour="false"
            app:isShowMillisecond="false"
            app:isShowMinute="false"
            app:isShowSecond="true"
            app:isTimeTextBold="false"
            app:suffixGravity="bottom"
            app:suffixSecond="S"
            app:suffixTextColor="@color/white"
            app:suffixTextSize="@dimen/dp_16"
            app:timeTextColor="@android:color/white"
            app:timeTextSize="@dimen/dp_16" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginRight="@dimen/dp_40"
        android:background="@color/gray_d" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_40"
        android:textColorHint="#FFFFFF">

        <EditText
            android:id="@+id/log_ed_pad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:hint="@string/login_password"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/dp_16" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginRight="@dimen/dp_40"
        android:background="@color/gray_d" />

    <Button
        android:id="@+id/log_log_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_40"
        android:background="@drawable/login_selector"
        android:enabled="false"
        android:text="@string/login_login"
        android:textColor="@drawable/textcolor_selector"
        android:textSize="@dimen/dp_16" />

    <TextView
        android:id="@+id/tvTestUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:padding="@dimen/dp_10"
        android:text="@string/login_youke"
        android:textColor="@color/white" />
</LinearLayout>
