<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#48423D" >

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="46dip"
        android:background="#000000"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/setup_gesture_code"
            android:textSize="20sp"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/text_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:text="取消"
            android:textSize="18sp"
            android:textColor="@color/gesture_cancel_text_color" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/gesture_tip_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_layout"
        android:gravity="center"
        android:orientation="vertical" >

        <com.atguigu.gesturelock.widget.LockIndicator
            android:id="@+id/lock_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip" />

        <TextView
            android:id="@+id/text_tip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/set_gesture_pattern"
            android:textColor="#F98F12"
            android:layout_marginTop="10dip" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/gesture_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gesture_tip_layout"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dip" >
    </FrameLayout>

    <TextView
        android:id="@+id/text_reset"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@id/gesture_container"
        android:layout_marginTop="20dip"
        android:text="@string/set_gesture_pattern_reason"
        android:textColor="#816E6A" />

</RelativeLayout>
